--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "main": "dist/vue-media-embed.js",
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Blocklevel/vue-media-embed"
   },
   "scripts": {
+    "commit": "git-cz",
     "dev": "webpack --config webpack/dev/webpack.config.js -w",
     "build": "webpack --config webpack/prod/webpack.config.js",
-    "test:watch": "karma start ./test/karma.config.js"
+    "test:watch": "karma start ./test/karma.config.js",
+    "prepublish": "webpack --config webpack/prod/webpack.config.js"
+  },
+  "config": {
+    "commitizen": {
+      "path": "node_modules/cz-conventional-changelog"
+    }
   },
   "keywords": [
     "vue",
@@ -21,9 +28,9 @@
   "author": "supr3m0 <supr3m0@remodiego.com>",
   "license": "ISC",
   "bugs": {
-    "url": ""
+    "url": "https://github.com/Blocklevel/vue-media-embed/issues"
   },
-  "homepage": "",
+  "homepage": "https://github.com/Blocklevel/vue-media-embed/blob/master/README.md",
   "devDependencies": {
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
@@ -33,7 +40,9 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-stage-2": "^6.17.0",
     "babel-register": "^6.16.3",
+    "commitizen": "^2.8.6",
     "css-loader": "^0.25.0",
+    "cz-conventional-changelog": "^1.2.0",
     "eslint": "^3.8.1",
     "eslint-config-standard": "^6.2.0",
     "eslint-friendly-formatter": "^2.0.6",
@@ -53,6 +62,5 @@
     "webpack": "^1.13.2",
     "webpack-merge": "^0.17.0"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
