refactor + fix #2 and #4

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,9 +8,14 @@
   "settings": {
     "import/resolver": "webpack",
   },
+  "env": {
+    "browser": true
+  },
   "rules": {
     "no-console": 1,
-    "no-debugger": 1,
     "no-unused-vars": 1,
+    "no-debugger": 1,
+    "no-use-before-define": 1,
+    "max-len": [2, { "code": 130, "ignoreUrls": true }]
   }
 }
