--- a/package.json
+++ b/package.json
@@ -3,26 +3,23 @@
   "version": "0.0.3",
   "description": "media embed for youtube vimeo and soundcloud ",
   "main": "dist/vue-media-embed.js",
+  "files": [
+    "src",
+    "dist"
+  ],
+  "scripts": {
+    "dev": "webpack --config webpack/dev/webpack.config.js -w",
+    "build": "webpack --config webpack/prod/webpack.config.js",
+    "prepublish": "webpack --config webpack/prod/webpack.config.js"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/Blocklevel/vue-media-embed"
   },
-  "scripts": {
-    "commit": "git-cz",
-    "dev": "webpack --config webpack/dev/webpack.config.js -w",
-    "build": "webpack --config webpack/prod/webpack.config.js",
-    "test:watch": "karma start ./test/karma.config.js",
-    "prepublish": "webpack --config webpack/prod/webpack.config.js"
-  },
-  "config": {
-    "commitizen": {
-      "path": "node_modules/cz-conventional-changelog"
-    }
-  },
   "keywords": [
     "vue",
     "vimeo",
-    "soundloud",
+    "soundcloud",
     "youtube"
   ],
   "author": "supr3m0 <supr3m0@remodiego.com>",
@@ -32,35 +29,35 @@
   },
   "homepage": "https://github.com/Blocklevel/vue-media-embed/blob/master/README.md",
   "devDependencies": {
-    "babel-core": "^6.17.0",
-    "babel-eslint": "^7.0.0",
-    "babel-loader": "^6.2.5",
+    "babel-core": "^6.23.1",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.4.0",
     "babel-plugin-syntax-async-functions": "^6.13.0",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-preset-es2015": "^6.16.0",
-    "babel-preset-stage-2": "^6.17.0",
-    "babel-register": "^6.16.3",
-    "commitizen": "^2.8.6",
-    "css-loader": "^0.25.0",
-    "cz-conventional-changelog": "^1.2.0",
-    "eslint": "^3.8.1",
-    "eslint-config-standard": "^6.2.0",
-    "eslint-friendly-formatter": "^2.0.6",
-    "eslint-import-resolver-webpack": "^0.6.0",
-    "eslint-loader": "^1.6.0",
-    "eslint-plugin-promise": "^3.3.0",
-    "eslint-plugin-standard": "^2.0.1",
-    "html-loader": "^0.4.4",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.22.0",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "css-loader": "^0.26.2",
+    "eslint": "^3.17.1",
+    "eslint-config-standard": "^7.0.0",
+    "eslint-friendly-formatter": "^2.0.7",
+    "eslint-import-resolver-webpack": "^0.8.1",
+    "eslint-loader": "^1.6.3",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^2.1.1",
+    "html-loader": "^0.4.5",
     "json-loader": "^0.5.4",
-    "jszip": "^3.1.3",
-    "marked": "^0.3.6",
-    "node-sass": "^3.11.2",
-    "progress-bar-webpack-plugin": "^1.9.0",
-    "sass-loader": "^4.0.2",
-    "storage-helper": "^1.0.0",
-    "style-loader": "^0.13.1",
-    "webpack": "^1.13.2",
-    "webpack-merge": "^0.17.0"
+    "node-sass": "^4.5.0",
+    "progress-bar-webpack-plugin": "^1.9.3",
+    "sass-loader": "^6.0.2",
+    "sinon": "^1.17.7",
+    "style-loader": "^0.13.2",
+    "vue-loader": "^11.1.4",
+    "vue-template-compiler": "^2.2.3",
+    "webpack": "^2.2.1",
+    "webpack-auto-inject-version": "^0.2.11",
+    "webpack-merge": "^4.0.0"
   },
   "dependencies": {}
 }
